fixing spacing issues with no-section section when this nonsectino has no children

--- a/resources/assets/scss/partials/_dashboard.scss
+++ b/resources/assets/scss/partials/_dashboard.scss
@@ -86,201 +86,207 @@
     }
   }
 
-  .grid {
-    background: palette('gray', background);
-
-    .section-quick-actions {
-      @include transition(width);
-
+  .sections {
+    .grid {
       background: palette('gray', background);
-      height: 100%;
-      overflow: hidden;
-      position: absolute;
-      right: 0;
-      top: 0;
-      width: 0;
 
-      > a {
-        color: palette('gray', slate, 0.7);
-        display: inline-block;
-        font-size: 10px;
-        padding: 0 13px;
-        text-decoration: none;
+      .section-quick-actions {
+        @include transition(width);
 
-        i {
-          @include transition();
+        background: palette('gray', background);
+        height: 100%;
+        overflow: hidden;
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 0;
 
+        > a {
+          color: palette('gray', slate, 0.7);
           display: inline-block;
+          font-size: 10px;
+          padding: 0 13px;
+          text-decoration: none;
+
+          i {
+            @include transition();
+
+            display: inline-block;
+          }
+
+          &:first-child {
+            padding: 0 13px 0 26px;
+          }
+
+          &:last-child {
+            font-size: 14px;
+          }
+
+          &:hover i {
+            transform: scale(1.25);
+          }
         }
 
-        &:first-child {
-          padding: 0 13px 0 26px;
+        &.show {
+          overflow: visible;
+          width: unset;
+        }
+      }
+
+      .element {
+        .fp-style {
+          height: auto;
+          margin: 0 20px 0;
         }
 
-        &:last-child {
+        .fp-style:first-of-type {
+          margin-top: 16px;
+        }
+
+        .fp-style:last-of-type {
+          height: 53px;
+          margin: 16px 20px 10px;
+        }
+
+        .fp-header {
+          font-family: $ubuntu-bold;
+        }
+
+        .form-desc {
+          height: 73px;
+          margin: 16px 20px 10px;
+        }
+
+        .quote-text,
+        .quote-author {
+          color: #1f2833;
+          font-family: $ubuntu;
           font-size: 14px;
+          height: fit-content;
+          margin: 76px 20px 0;
         }
 
-        &:hover i {
-          transform: scale(1.25);
+        .quote-author {
+          height: 20px;
+          margin: 14px 20px 0;
         }
-      }
 
-      &.show {
-        overflow: visible;
-        width: unset;
-      }
-    }
+        &.note-block {
+          overflow-y: auto;
 
-    .element {
-      .fp-style {
-        height: auto;
-        margin: 0 20px 0;
-      }
+          &.edit-mode:hover {
+            overflow-y: hidden;
+          }
+        }
 
-      .fp-style:first-of-type {
-        margin-top: 16px;
-      }
+        .note-title {
+          border: 0;
+          box-sizing: border-box;
+          width: 100%;
 
-      .fp-style:last-of-type {
-        height: 53px;
-        margin: 16px 20px 10px;
-      }
+          &::placeholder {
+            color: palette('black', base);
+          }
 
-      .fp-header {
-        font-family: $ubuntu-bold;
-      }
+          &:focus {
+            outline: none;
+          }
+        }
 
-      .form-desc {
-        height: 73px;
-        margin: 16px 20px 10px;
-      }
-
-      .quote-text,
-      .quote-author {
-        color: #1f2833;
-        font-family: $ubuntu;
-        font-size: 14px;
-        height: fit-content;
-        margin: 76px 20px 0;
-      }
-
-      .quote-author {
-        height: 20px;
-        margin: 14px 20px 0;
-      }
-
-      &.note-block {
-        overflow-y: auto;
-
-        &.edit-mode:hover {
+        .note-desc {
+          background: transparent;
+          border: 0;
+          height: 100px;
+          margin: 10px 20px 10px;
           overflow-y: hidden;
+          resize: none;
+          width: 85%;
+
+          &::placeholder {
+            color: palette('black', base);
+          }
+
+          &:focus {
+            outline: none;
+          }
+        }
+
+        .tweets {
+          margin: 10px 0 0;
+          overflow: visible;
+          width: 100%;
+        }
+
+        &.tweets {
+          overflow-x: hidden;
+          overflow-y: scroll;
+
+          &.edit-mode {
+            overflow: hidden;
+          }
         }
       }
 
-      .note-title {
-        border: 0;
-        box-sizing: border-box;
-        width: 100%;
+      &.no-section {
+        margin: 60px auto 55px;
 
-        &::placeholder {
-          color: palette('black', base);
-        }
+        &.no-children {
+          margin: 0 auto;
 
-        &:focus {
-          outline: none;
+          & + .grid {
+            margin-top: 10px;
+          }
         }
       }
 
-      .note-desc {
-        background: transparent;
-        border: 0;
-        height: 100px;
-        margin: 10px 20px 10px;
-        overflow-y: hidden;
-        resize: none;
-        width: 85%;
+      &.add-section {
+        padding-bottom: 180px;
 
-        &::placeholder {
-          color: palette('black', base);
+        .title {
+          background: gradient('background');
+          /* background: linear-gradient(270deg, #00C1B3 0%, #1CC9B0 100%); */
+          border: 1px solid palette('green',accent,0.2);
+          border-radius: 5px;
+          box-shadow: 0 3px 5px 0 rgba(57, 67, 89, 0.05);
+          height: 40px;
+          margin-right: 20px;
+          padding-right: 0;
+          width: 380px;
+
+          form {
+            height: 100%;
+          }
+
+          input {
+            background: transparent;
+            border: none;
+            color: palette('green', accent);
+            font-family: $ubuntu;
+            font-size: 16px;
+            height: 100%;
+            padding: 0 20px;
+            width: fill;
+
+            &::placeholder {
+              color: palette('green', accent);
+              font-family: $ubuntu-medium;
+            }
+
+            &:focus {
+              outline: none;
+            }
+          }
         }
 
-        &:focus {
-          outline: none;
-        }
-      }
+        .line-container {
+          height: 40px;
 
-      .tweets {
-        margin: 10px 0 0;
-        overflow: visible;
-        width: 100%;
-      }
-
-      &.tweets {
-        overflow-x: hidden;
-        overflow-y: scroll;
-
-        &.edit-mode {
-          overflow: hidden;
+          .line {
+            margin: 20px 0 0;
+          }
         }
       }
     }
-
-  &.no-section {
-    margin: 0 auto 55px;
-
-    &.mt-xxxl {
-      margin-top: 60px;
-    }
-  }
-
-	&.add-section {
-		padding-bottom: 180px;
-
-		.title {
-			background: gradient('background');
-			/* background: linear-gradient(270deg, #00C1B3 0%, #1CC9B0 100%); */
-			border: 1px solid palette('green',accent,0.2);
-			border-radius: 5px;
-			box-shadow: 0 3px 5px 0 rgba(57, 67, 89, 0.05);
-			height: 40px;
-			margin-right: 20px;
-			padding-right: 0;
-			width: 380px;
-
-			form {
-				height: 100%;
-			}
-
-			input {
-				background: transparent;
-				border: none;
-				color: palette('green', accent);
-				font-family: $ubuntu;
-				font-size: 16px;
-				height: 100%;
-				padding: 0 20px;
-				width: fill;
-
-				&::placeholder {
-					color: palette('green', accent);
-					font-family: $ubuntu-medium;
-				}
-
-				&:focus {
-					outline: none;
-				}
-			}
-		}
-
-		.line-container {
-			height: 40px;
-
-			.line {
-				margin: 20px 0 0;
-			}
-		}
-	}
   }
   
   .dashboard-submit .fixed-bottom-slide {
